[package]
name = "mmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
axum = { version = "0.6.1", features = ["headers", "macros", "json"] }
axum-extra = { version = "0.4.2", features = ["typed-routing"] }
dotenvy = "0.15.6"
eyre = "0.6.8"
hyper = { version = "0.14.23", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.0", features = ["macros", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
