[package]
name = "mmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
axum = { version = "0.6.1", features = ["headers", "macros", "json"] }
axum-extra = { version = "0.4.2", features = ["typed-routing"] }
bunt = "0.2.7"
color-eyre = "0.6.2"
derive-new = "0.5.9"
eyre = "0.6.8"
figment = { version = "0.10.8", features = ["toml", "env"] }
hyper = { version = "0.14.23", features = ["full"] }
openssl = "0.10.45"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
signal = "0.7.0"
thiserror = "1.0.38"
tokio = { version = "1.24.0", features = ["macros", "full"] }
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
